--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    background-color: #caf0f8;
+    background-color: #E1DEE3;
 }
 .Game{
     height: 50vh;
@@ -28,11 +28,10 @@
 .boxes{
     width: 30%;
     height: 30%;
-    background-color: #0077b6;
-    border: 1px solid black;
-    color: white;
-    box-shadow: 5px 2px 12px blue;
-    font-size: xx-large;
+    background-color: #D5A18E;
+    border: 1px solid #B9314F;
+    box-shadow: 5px 2px 12px #3A4F41;
+    font-size: 80px;
     border-radius: 20px;
     margin: 5px;
 }
@@ -41,7 +40,7 @@
     height: 10%;
     border-radius: 20px;
     color: #b1d5db;
-    background-color: #03045e;
+    background-color: #B9314F;
     font-size: medium;
 }
 #hiddenReset{
@@ -53,7 +52,7 @@
 .winMsg{
     visibility: visible;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #03045e;
+    color: #3A4F41;
 }
 #newGame{
     width: 10%;
